<resources>
    <string name="app_name">Code Land</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="number_one">1</string>
    <string name="proceed">Proceed</string>
    <string name="user_id_not_found">User Id Not Found</string>
    <string name="user_idnot_empty">User Id cannot be empty</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="links">Links</string>
    <string name="courses">Courses</string>
    <string name="campaigns">Campaigns</string>
    <string name="profiles">Profiles</string>
    <string name="add_button">Add Button</string>
    <string name="curve">Curve</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="todays_clicks">Today\'s Clicks</string>
    <string name="top_location">Top Location</string>
    <string name="top_source">Top Source</string>
    <string name="best_time">Best Time</string>
    <string name="top_links">Top Links</string>
    <string name="recent_links">Recent Links</string>
    <string name="view_all_links">View all Links</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="item_icon">Item Icon</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="clicks">Clicks</string>
    <string name="copy_link">Copy Link</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
    <string name="good_night">Good night!</string>
    <string name="chart_date_range">%1\$s - %2\$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="upload_a_image">Upload a Image</string>
    <string name="pankaj_lilan">Pankaj Lilan</string>
    <string name="upload">Upload</string>
    <string name="view">View</string>
    <string name="close_button">Close Button</string>
    <string name="v1_7_2023_codeland_infosolutions_pvt_ltd">v1.7 © 2023, Codeland Infosolutions Pvt Ltd.</string>
    <string name="logout_user">Logout User</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="onboarding_content"><![CDATA["\n      For Assistance & Login Details Contact:\n      English, Kannada & Telugu : 7406333800\n      English, Kannada & Hindi    : 9071386515\n      "]]></string>
</resources>