<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/dashboardll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingHorizontal="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_medium"
                android:text="@string/dashboard"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imgBtnLogout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/margin_medium"
                android:layout_weight="0"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/logout_user"
                android:padding="@dimen/margin_small"
                android:scaleType="centerInside"
                android:src="@drawable/ic_logout"
                app:layout_constraintBottom_toTopOf="@+id/btnUpload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="-16dp"
            android:backgroundTint="#F5F5F5"
            app:cardCornerRadius="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboardll">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvGreetings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_weight="1.7"
                    android:text="@string/good_morning"
                    android:textColor="#999CA0"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_weight="1.7"
                    android:text="@string/pankaj_lilan"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvGreetings" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/settings_icon"
                    android:src="@drawable/high"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_large"
                    app:cardCornerRadius="@dimen/margin_small"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_weight="1.7"
                            android:text="@string/upload_a_image"
                            android:textAlignment="center"
                            android:textColor="#999CA0"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/appCompatSampleImageView"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="@dimen/margin_medium"
                            android:src="@drawable/img_sample"
                            app:layout_constraintBottom_toTopOf="@+id/btnUpload"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/appCompatImageView"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_margin="@dimen/margin_medium"
                            android:background="@drawable/border_with_space"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toTopOf="@+id/btnUpload"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnUpload"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/margin_large"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:background="@drawable/bg_button_shape"
                            android:paddingHorizontal="@dimen/margin_x_large"
                            android:paddingVertical="12sp"
                            android:text="@string/upload"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="18.sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/margin_large"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:background="@drawable/bg_grey_button_shape"
                            android:paddingHorizontal="@dimen/margin_x_large"
                            android:paddingVertical="12sp"
                            android:text="@string/view"
                            android:textAllCaps="false"
                            android:textColor="@android:color/black"
                            android:textSize="18.sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>