<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="210dp"
            android:layout_height="329dp"
            android:layout_marginHorizontal="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:src="@drawable/img_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:letterSpacing="0.05"
            android:autofillHints="username"
            android:inputType="text"
            android:paddingStart="@dimen/margin_medium"
            android:background="@drawable/border_grey"
            android:layout_marginTop="@dimen/margin_large"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:hint="@string/username"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:letterSpacing="0.05"
            android:autofillHints="username"
            android:inputType="textPassword"
            android:paddingStart="@dimen/margin_medium"
            android:background="@drawable/border_grey"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:hint="@string/password"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_username"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_button_shape"
            android:paddingVertical="12sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="24.sp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingHorizontal="@dimen/margin_xx_large"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextViewFooter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/v1_7_2023_codeland_infosolutions_pvt_ltd"
            android:layout_marginBottom="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>